# pouch

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  pouch_common.cmake  requirements-ci-esp-idf.in  requirements-ci-esp-idf.txt  requirements-ci-zephyr.in  requirements-ci-zephyr.txt  requirements-ci.txt  requirements-lint.in  requirements-lint.txt  requirements.txt  west-ncs.yml  west-zephyr.yml  west.yml
bsim_bin/: CMakeLists.txt
examples/coap/: CMakeLists.txt  Kconfig  README.md  pouch-coap-ca-cert.inc  prj.conf
examples/coap/src/: credentials.c  credentials.h  main.c
examples/esp_idf/ble_gatt/main/: CMakeLists.txt  Kconfig.projbuild  ble_peripheral.c  ble_peripheral.h  console.c  console.h  credentials.c  credentials.h  fw_update.c  idf_component.yml  main.c
examples/esp_idf/http_client/main/: CMakeLists.txt  Kconfig.projbuild  console.c  console.h  credentials.c  credentials.h  credentials_nvs.c  credentials_nvs.h  fw_update.c  idf_component.yml  main.c  temperature.c  temperature.h  wifi.c
examples/gateway/: CMakeLists.txt  Kconfig.sysbuild  README.md  sample.yaml
examples/gateway/boards/: nrf9160dk_nrf9160_ns.conf
examples/gateway/pytest/: conftest.py
examples/gateway/src/: main.c
examples/http/: CMakeLists.txt  Kconfig  README.md  prj.conf
examples/http/socs/: native.conf
examples/http/src/: conn_monitor.c  conn_monitor.h  credentials.c  main.c
examples/zephyr/ble_gatt/: CMakeLists.txt  Kconfig  prj.conf
examples/zephyr/ble_gatt/boards/: frdm_rw612.conf
examples/zephyr/ble_gatt/src/: ble_peripheral.c  credentials.c  fw_update.c  main.c
examples/zephyr/gateway/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  overlay-ble_gatt-ci-ota.conf  prj.conf  sample.yaml  sysbuild.cmake
examples/zephyr/gateway/boards/: frdm_rw612.conf  frdm_rw612_wifi.conf  mg100.conf  nrf9160dk_nrf52840.conf  nrf9160dk_nrf52840.overlay  thingy91x_nrf5340_cpuapp.overlay
examples/zephyr/gateway/pytest/: conftest.py  test_ota.py  test_sample.py
examples/zephyr/gateway/socs/: native_64.conf
examples/zephyr/gateway/src/: credentials.c  credentials.h  main.c  wifi.c
examples/zephyr/gateway/sysbuild/: hci_ipc.overlay
golioth_sdk/: CMakeLists.txt  Kconfig  Kconfig.espidf  dispatch.c  dispatch.h  dispatch.ld  dispatch.lf  golioth_sdk.cmake  hex.c  hex.h  idf_component.yml  ota.c  ota.h  ota.ld  ota.lf  ota_components.ld  ota_upper.c  settings.c  settings.h  settings_callbacks.c  settings_callbacks.ld  zcbor_utils.c  zcbor_utils.h
golioth_sdk/cmake/: esp_idf_component.cmake  golioth_sdk_linker_files.cmake  utils.cmake  zephyr_module.cmake
golioth_sdk/components/golioth_sdk/: CMakeLists.txt  Kconfig
golioth_sdk/include/golioth/: settings_callbacks.h  settings_types.h
golioth_sdk/zephyr/: module.yml
lib/zcbor_utils/: CMakeLists.txt  Kconfig  zcbor_utils.c  zcbor_utils.cmake
lib/zcbor_utils/include/: zcbor_utils.h
port/esp_idf/: CMakeLists.txt  Kconfig  Kconfig.port_log_levels  blockbuf.c  downlink_handlers.lf  event_handlers.lf  pouch_ca_cert.c  pouch_port_macros_internal.h  uplink_handlers.lf
port/esp_idf/http_client/: CMakeLists.txt  sdkconfig.defaults
port/esp_idf/test/main/: Kconfig  (+8 more)
port/esp_idf/transport/: CMakeLists.txt  Kconfig
port/zephyr/: CMakeLists.txt  Kconfig  Kconfig.port_log_levels  blockbuf.c  downlink_handlers.ld  event_handlers.ld  pouch_ca_cert.c  zephyr_port_layer.c
port/zephyr/include/: pouch_port_macros_internal.h
port/zephyr/transport/: Kconfig
src/: CMakeLists.txt  Kconfig  Kconfig.template.pouch_log_config  block.c  block.h  blockbuf.h  buf.c  buf.h  cert.c  cert.h  crypto.h  crypto_none.c  crypto_saead.c  downlink.c  downlink.h  downlink_handlers.ld  encrypt.h  encrypt_none.c  entry.c  entry.h  event_handlers.ld  header.c  header.cddl  header.h  info_characteristic.c  packet.c  packet.h  packetizer.c  packetizer.h  peripheral.c  pouch.c  pouch.h  session_info.cddl  stream.c  stream.h  toothfairy_declarations.h  toothfairy_uuids.h  uplink.c  uplink.h  uplink_characteristic.c  (+1 more)
src/gateway/: CMakeLists.txt  Kconfig  block.c  block.h  cert.c  cloud.c  downlink.c  downlink.h  info.c  server-prod.pem  types.h  uplink.c  uplink.h
src/gateway/bt/: connect.c  device_cert.c  downlink.c  info.c  scan.c  server_cert.c  uplink.c
src/pouch/: uplink.c  uplink.h
src/saead/: Kconfig  downlink.c  downlink.h  mbedtls_config.h  session.c  session.h  uplink.c  uplink.h
src/transport/: CMakeLists.txt  Kconfig  bearer.h  trx.h
src/transport/ble_gatt/: CMakeLists.txt  Kconfig  characteristics.ld  device_cert_characteristic.c  downlink_characteristic.c  golioth_ble_gatt_declarations.h  golioth_ble_gatt_uuids.h  info.cddl  info_characteristic.c  packetizer.c  packetizer.h  peripheral.c  peripheral_int.h  server_cert_characteristic.c  uplink_characteristic.c
src/transport/coap/: CMakeLists.txt  Kconfig  pouch_coap.c
src/transport/endpoints/: device_cert.c  downlink.c  endpoint.h  endpoints.h  info.c  server_cert.c  uplink.c
src/transport/gatt/: CMakeLists.txt  Kconfig  attributes.ld  device_cert_characteristic.c  downlink_characteristic.c  info.cddl  info_characteristic.c  peripheral.c  pouch_gatt_declarations.h  server_cert_characteristic.c  uplink_characteristic.c
src/transport/http/: CMakeLists.txt  Kconfig  client.c  pouch_http.c
src/transport/sar/: packet.c  packet.h  receiver.c  receiver.h  sender.c  sender.h
src/transport/serial/: broker.c  channel.c  channel.h  device.c  packet.c  packet.h  serial.c  serial.h
src/transport/toothfairy/: CMakeLists.txt  attributes.ld  characteristics.ld  info.cddl  packetizer.h  peripheral.c  peripheral_int.h  uplink_characteristic.c
src/transport/topics/: device_cert.c  downlink.c  info.c  server_cert.c  topics.h  uplink.c
tests/pouch/downlink/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/pouch/gateway/: CMakeLists.txt  prj.conf  testcase.yaml
tests/pouch/gatt_broker/: CMakeLists.txt  prj.conf  testcase.yaml
tests/pouch/transport/: CMakeLists.txt  prj.conf  testcase.yaml
(+537 files in other folders)
