# Copyright (c) 2026 Golioth, Inc.
#
# SPDX-License-Identifier: Apache-2.0

pouch_config_enabled(_pouch_gateway CONFIG_POUCH_GATEWAY)
if(NOT _pouch_gateway)
    return()
endif()

# Assert that the Port set required values
if(NOT DEFINED POUCH_ACTIVE_TARGET)
    message(FATAL_ERROR "POUCH_ACTIVE_TARGET must be set by port/<platform>/CMakeLists.txt")
endif()

set(_gateway_root ${CMAKE_CURRENT_LIST_DIR})

# Core gateway sources
target_sources(${POUCH_ACTIVE_TARGET} PRIVATE
    ${_gateway_root}/block.c
    ${_gateway_root}/cert.c
    ${_gateway_root}/downlink.c
    ${_gateway_root}/info.c
    ${_gateway_root}/uplink.c
)

# Broker endpoints (shared between all broker transports)
target_sources(${POUCH_ACTIVE_TARGET} PRIVATE
    ${POUCH_ROOT}/src/transport/endpoints/broker/info.c
    ${POUCH_ROOT}/src/transport/endpoints/broker/uplink.c
    ${POUCH_ROOT}/src/transport/endpoints/broker/downlink.c
    ${POUCH_ROOT}/src/transport/endpoints/broker/device_cert.c
    ${POUCH_ROOT}/src/transport/endpoints/broker/server_cert.c
)

# Conditional broker transport sources
pouch_config_enabled(_pouch_gateway_gatt CONFIG_POUCH_GATEWAY_GATT)
if(_pouch_gateway_gatt)
    target_sources(${POUCH_ACTIVE_TARGET} PRIVATE
        ${POUCH_ROOT}/port/zephyr/transport/gatt/broker/bond.c
        ${POUCH_ROOT}/port/zephyr/transport/gatt/broker/discover.c
        ${POUCH_ROOT}/port/zephyr/transport/gatt/broker/broker.c
        ${POUCH_ROOT}/port/zephyr/transport/gatt/broker/scan.c
    )
endif()

target_include_directories(${POUCH_ACTIVE_TARGET} PRIVATE
    ${POUCH_ROOT}/src
    ${POUCH_ACTIVE_GENERATED_DIR}/include
)
target_link_libraries(${POUCH_ACTIVE_TARGET} PRIVATE mbedTLS)

# Server certificate PEM embedding.
# cert.c includes "pouch_gateway_server.pem.inc" which must contain
# comma-separated 0xNN bytes.
get_filename_component(_server_pem
    "${CONFIG_POUCH_GATEWAY_SERVER_CERT_PEM}"
    REALPATH BASE_DIR "${_gateway_root}")

if(Zephyr_DIR)
    generate_inc_file_for_target(${POUCH_ACTIVE_TARGET}
        ${_server_pem}
        ${ZEPHYR_BINARY_DIR}/include/generated/pouch_gateway_server.pem.inc)
else()
    # Generic (ESP-IDF) path: generate the .inc file at configure time.
    set(_server_pem_inc "${POUCH_ACTIVE_GENERATED_DIR}/include/pouch_gateway_server.pem.inc")
    file(READ "${_server_pem}" _pem_hex HEX)
    string(REGEX REPLACE "([0-9a-fA-F][0-9a-fA-F])" "0x\\1, " _pem_bytes "${_pem_hex}")
    file(WRITE "${_server_pem_inc}" "${_pem_bytes}")
endif()

# info_decode.c — generated by zcbor from the info CDDL schema.
# The source and include dir are declared outside the early-expansion guard
# so CMake can set up build ordering during dependency discovery. The custom
# command itself runs only during the actual build.
file(MAKE_DIRECTORY ${POUCH_ACTIVE_GENERATED_DIR}/include)

target_sources(${POUCH_ACTIVE_TARGET} PRIVATE
    ${POUCH_ACTIVE_GENERATED_DIR}/info_decode.c)

if(NOT CMAKE_BUILD_EARLY_EXPANSION)
    add_custom_command(
        OUTPUT ${POUCH_ACTIVE_GENERATED_DIR}/info_decode.c
        COMMAND zcbor code
            -c ${POUCH_ROOT}/src/transport/info.cddl
            -s -t pouch_gatt_info -d
            --include-prefix cddl/
            --output-c ${POUCH_ACTIVE_GENERATED_DIR}/info_decode.c
            --output-h ${POUCH_ACTIVE_GENERATED_DIR}/include/cddl/info_decode.h
        BYPRODUCTS
            ${POUCH_ACTIVE_GENERATED_DIR}/include/cddl/info_decode.h
            ${POUCH_ACTIVE_GENERATED_DIR}/include/cddl/info_decode_types.h
        DEPENDS ${POUCH_ROOT}/src/transport/info.cddl
        WORKING_DIRECTORY ${POUCH_ACTIVE_GENERATED_DIR}
    )

    string(REPLACE "::" "_" _pouch_gateway_codegen_target ${POUCH_ACTIVE_TARGET})
    set(_pouch_gateway_codegen_target "${_pouch_gateway_codegen_target}_generate_gateway_info")
    add_custom_target(${_pouch_gateway_codegen_target}
        DEPENDS ${POUCH_ACTIVE_GENERATED_DIR}/info_decode.c)
    add_dependencies(${POUCH_ACTIVE_TARGET} ${_pouch_gateway_codegen_target})
endif()
